# rr

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README  README.md  Vagrantfile  configure  dummy.txt  index.html  index2.html  rr.html  rr.spec
.android/: Dockerfile  README.md  build.sh  cloudbuild.yaml
.buildkite/: .gitignore  CTestCostData.txt  Manifest.toml  Project.toml  capture_tmpdir.jl  pipeline.yml
.buildkite/lib/: common.jl  generate.jl  launch.jl  types.jl
.github/workflows/: alpine-build.yml  android-build.yml  build-and-test-main.yml  build-and-test.yml  build.yml  c-cpp.yml
doc/: rr.html
include/rr/: rr.h
release-process/: README.md  prepare-release.py  rr-testing-cloud-formation.json  rr-testing.sh  test-system.py
release-process/distro-configs/: centos10.json  centos8.json  centos9.json  debian10.json  debian11.json  debian12.json  debian13.json  ubuntu18-lts.json  ubuntu20-lts.json  ubuntu22-lts.json  ubuntu23.04.json  ubuntu24-lts.json  ubuntu24.10.json  ubuntu25.04.json  ubuntu26-lts.json
release-process/test-data/: rr-test-doc.odt  test.html
releases/: rr-0.0.0-Linux-x86_64.deb  rr-0.0.0-Linux-x86_64.rpm  rr-0.1.0-Linux-i686.deb  rr-0.1.0-Linux-i686.rpm  rr-0.1pre.0-Linux-i686.deb  rr-0.1pre.0-Linux-i686.rpm  rr-0.2.0-Linux-i686.deb  rr-0.2.0-Linux-i686.rpm  rr-0.3.0-Linux-i686.deb  rr-0.3.0-Linux-i686.rpm  rr-0.4.0-Linux-i686.deb  rr-0.4.0-Linux-i686.rpm  rr-0.4.1-Linux-i686.deb  rr-0.4.1-Linux-i686.rpm  rr-0.4.1-Linux-x86_64.deb  rr-0.4.1-Linux-x86_64.rpm  rr-0.5.1-Linux-i686.deb  rr-0.5.1-Linux-i686.rpm  rr-0.5.1-Linux-x86_64.deb  rr-0.5.1-Linux-x86_64.rpm  rr-1.0.0-Linux-i686.deb  rr-1.0.0-Linux-i686.rpm  rr-1.0.0-Linux-x86_64.deb  rr-1.0.0-Linux-x86_64.rpm  rr-1.1.0-Linux-i686.deb  rr-1.1.0-Linux-i686.rpm  rr-1.1.0-Linux-x86_64.deb  rr-1.1.0-Linux-x86_64.rpm  rr-1.2.1-Linux-i686.deb  rr-1.2.1-Linux-i686.rpm  rr-1.2.1-Linux-x86_64.deb  rr-1.2.1-Linux-x86_64.rpm  rr-1.3.0-Linux-i686.deb  rr-1.3.0-Linux-i686.rpm  rr-1.3.0-Linux-x86_64.deb  rr-1.3.0-Linux-x86_64.rpm  rr-1.4.0-Linux-i686.deb  rr-1.4.0-Linux-i686.rpm  rr-1.4.0-Linux-x86_64.deb  rr-1.4.0-Linux-x86_64.rpm  (+24 more)
rr_/: .cproject
scripts/: checkpoint-visualizer.html  collect-symbols.py  github-actions-CTestCostData.txt  github-actions-build.sh  github-actions-test.sh  reformat.sh  rr-collect-symbols.py  rr-gdb-script-host.py  rr_completion  rr_completion.zsh  setup_travis.sh  signal-rr-recording.sh  tag-release.sh  update-gh-pages.sh  zen_workaround.py  zen_workaround.service
snap/: snapcraft.yaml
src/: AddressSpace.cc  AddressSpace.h  AutoRemoteSyscalls.cc  AutoRemoteSyscalls.h  BpfMapMonitor.h  BreakpointCondition.h  BuildidCommand.cc  CPUFeaturesCommand.cc  CPUIDBugDetector.cc  CPUIDBugDetector.h  CPUs.cc  CPUs.h  CheckpointInfo.cc  CheckpointInfo.h  Command.cc  Command.h  CompressedReader.cc  CompressedReader.h  CompressedWriter.cc  CompressedWriter.h  ContextSwitchEvent.cc  ContextSwitchEvent.h  CreateCheckpointsCommand.cc  CreateCheckpointsCommand.h  DebuggerExtensionCommand.cc  DebuggerExtensionCommand.h  DebuggerExtensionCommandHandler.cc  DebuggerExtensionCommandHandler.h  DiversionSession.cc  DiversionSession.h  DumpCommand.cc  DumpCommand.h  Dwarf.cc  Dwarf.h  ElfReader.cc  ElfReader.h  EmuFs.cc  EmuFs.h  Event.cc  Event.h  (+224 more)
src/audit/: rtld-audit.c  rtld-audit.h  stap-note-iter.c  stap-note-iter.h
src/bpf/: async_event_filter.c
src/chaos-test/: chaos-test.sh  chaosutil.h  core_count.c  futex_wakeup.c  getaffinity_core_count.c  harness.py  mmap_adjacent.c  mmap_bits.c  pipe_wakeup.c  startup.c  starvation_multithreaded.c  starvation_singlethreaded.c
src/counters-test/: README.md  counters.c  counters.cc
src/ftrace/: ftrace_helper.c
src/perf-test/: many-threads-wake.c  many-threads-wake.md  many-threads.c  many-threads.md  unbuffered-syscalls.c  unbuffered-syscalls.md
src/preload/: breakpoint_table.S  overrides.c  preload.c  preload_interface.h  raw_syscall.S  rr_page.S  rr_page.ld  rr_page.ld.in  rr_page_instructions.S  rr_vdso.S  rrcalls.h  seccomp-bpf.h  syscall_buffer.h  syscall_hook.S  syscallbuf.c  syscallbuf.h  traced_syscall.S  traced_syscall_shared.S  tweak_librrpage.py  untraced_syscall.S  vsyscall_hook.S
src/recorder/: handle_ioctl.c  handle_ioctl.cc  handle_ioctl.h  handle_signal.c  handle_signal.cc  handle_signal.h  rec_process_event.c  rec_process_event.cc  rec_process_event.h  rec_sched.c  rec_sched.cc  rec_sched.h  recorder.c  recorder.cc  recorder.h  write_trace.c  write_trace.h
src/replayer/: dbg_gdb.c  dbg_gdb.cc  dbg_gdb.h  read_trace.c  read_trace.h  rep_process_event.c  rep_process_event.cc  rep_process_event.h  rep_process_signal.c  rep_process_signal.h  rep_sched.c  rep_sched.cc  rep_sched.h  replayer.c  replayer.cc  replayer.h  syscall_defs.h
src/script/: setup.sh  setup_travis.sh  tag-release.sh  test.sh  update-gh-pages.sh
src/share/: config.h  dbg.h  fixedstack.h  hpc.c  hpc.cc  hpc.h  ipc.c  ipc.cc  ipc.h  list.c  list.h  seccomp-bpf.h  shmem.c  shmem.cc  shmem.h  sys.c  sys.cc  sys.h  syscall_buffer.c  syscall_buffer.h  task.c  task.cc  task.h  trace.c  trace.cc  trace.h  types.h  util.c  util.cc  util.h  wrap_syscalls.c  wrap_syscalls.h
src/test/: 64bit_child.c  64bit_child.run  _llseek.c  abort.c  abort_nonmain.c  abort_nonmain.run  abort_nonmain.run.disabled  accept.c  accept.run  acct.c  adjtimex.c  aio.c  alarm.c  alarm.run  alarm2.c  alsa_ioctl.c  alternate_thread_diversion.c  alternate_thread_diversion.py  arch_prctl.c  args.c  args.run  async_kill_with_syscallbuf.c  async_kill_with_syscallbuf2.c  async_kill_with_syscallbuf2.run  async_kill_with_threads.c  async_kill_with_threads_main_running.c  async_kill_with_threads_main_running.run  async_kill_with_threads_thread_running.c  async_kill_with_threads_thread_running.run  async_segv.c  async_segv.run  async_segv.run.disabled  async_segv_ignored.c  async_signal_syscalls.c  async_signal_syscalls.run  async_signal_syscalls2.c  async_signal_syscalls2.run  (+1211 more)
src/test-monitor/: test-monitor.cc
(+114 files in other folders)
